src/Components/ProductCarousel/ProductCarousel.module.css
/* carousel */
.carousel{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* trendHeader */
.trendHeader{
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.trendHeader h2{
    float: left;
}

/* headerButtons */
.headerButtons{
    display: flex;
    align-items: center;
}


.headerButtons button{
    margin-right: 5px;
    color: black;
    background-color: white;
    border: 1px solid black;
}

.headerButtons button:hover{
    cursor: pointer;
    background-color: var(--white-hover);
}

/* trendBody */
.trendBody{
    overflow: hidden;
}

/* trendItems */
.trendItems{
    --x-axis : 0%;
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    grid-gap: 5px;
    width: 200%;
    transform: translateX(var(--x-axis));
}


@media (max-width:1000px){
    /* trendHeader */
    .trendHeader{
        width: 500px;
    }
    /* trendBody */
    .trendBody{
        width: 500px;
    }
    /* trendItems */
    .trendItems{
        width: 500%;
    }
}

@media (max-width: 500px){
    /* trendHeader */
    .trendHeader{
        width: 200px;
    }
    /* trendBody */
    .trendBody{
        width: 200px;
    }
    /* trendItems */
    .trendItems{
        width: 1000%;
    }
}

